# Process this file with autoconf to produce a configure script.
AC_INIT(detox, 0.9.0, purgedhalo at users.sourceforge.net)
AC_CONFIG_SRCDIR([detox.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_LSTAT
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset strrchr strstr strtol getopt_long])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([install.sh], [chmod +x install.sh])
AC_OUTPUT
